--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Quintessential&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Asimovian&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    .font-playwrite {
+        font-family: "Quintessential", serif;
+    }
+}
+@layer base {
+    .font-BBH {
+         font-family: "Asimovian", sans-serif;
+
+    }
+}
+@layer base {
+    .font-osw {
+          font-family: "Oswald", sans-serif;
+
+
+    }
+}
